--- a/HaCreator/GUI/Quest/QuestEditor.xaml
+++ b/HaCreator/GUI/Quest/QuestEditor.xaml
@@ -540,6 +540,47 @@
                         Click="botton_selectAddSkill_Click"/>
             </StackPanel>
         </DataTemplate>
+        
+        
+        <!-- Job -->
+        <DataTemplate x:Key="ActJobTemplate">
+            <StackPanel Orientation="Vertical">
+                <ListBox ItemsSource="{Binding JobsReqs}" MinHeight="30" 
+                         HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Margin="0,0,0,10">
+                                <!-- Quest Id-->
+                                <StackPanel Orientation="Horizontal">
+                                    <StackPanel Orientation="Horizontal" Margin="0,0,10,0">
+                                        <TextBlock Text="Job Id:" Width="60"/>
+                                        <TextBox Text="{Binding JobId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  
+                                             InputScope="Number" IsReadOnly="True"
+                                             Margin="5,0,0,0" Width="100"/>
+                                    </StackPanel>
+
+                                    <StackPanel Orientation="Horizontal" Margin="2,0,0,0">
+                                        <TextBlock Text="[" />
+                                        <TextBlock Text="{Binding JobId, Converter={StaticResource jobIdToJobNameConverter}}"  FontWeight="Bold"/>
+                                        <TextBlock Text="]"/>
+                                    </StackPanel>
+                                </StackPanel>
+
+                                <Button x:Name="button_removeJob" Content="X" FontSize="8" Width="15" Height="15" 
+                                        VerticalAlignment="Bottom" HorizontalAlignment="Right"
+                                        Margin="3,0,0,0" Style="{DynamicResource ButtonStyle_Black}"
+                                        Click="button_removeJob_Click"
+                                />
+                            </Grid>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+
+                <Button x:Name="botton_selectAddJob" Content="Add job" Style="{StaticResource ButtonStyle_Black}"  Height="20" Width="100"
+                        VerticalAlignment="Bottom" HorizontalAlignment="Right"
+                        Click="botton_selectAddJob_Click"/>
+            </StackPanel>
+        </DataTemplate>
 
         <!-- lvMin -->
         <DataTemplate x:Key="ActLvMinTemplate">
@@ -976,6 +1017,9 @@
                 </DataTrigger>
                 <DataTrigger Binding="{Binding ActType}" Value="{x:Static local:QuestEditorActType.Skill}">
                     <Setter TargetName="RewardsContent" Property="ContentTemplate" Value="{StaticResource ActSkillTemplate}"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding ActType}" Value="{x:Static local:QuestEditorActType.Job}">
+                    <Setter TargetName="RewardsContent" Property="ContentTemplate" Value="{StaticResource ActJobTemplate}"/>
                 </DataTrigger>
                 <DataTrigger Binding="{Binding ActType}" Value="{x:Static local:QuestEditorActType.LvMin}">
                     <Setter TargetName="RewardsContent" Property="ContentTemplate" Value="{StaticResource ActLvMinTemplate}"/>
